--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" styleClass="container-level-2" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
+
+<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
    <children>
-      <VBox prefHeight="660.0" prefWidth="660.0">
-         <children>
-            <Pane prefHeight="55.0" prefWidth="660.0">
-               <children>
-                  <Button layoutX="350.0" layoutY="15.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="primaryButton" text="Aggiungi" />
-                  <Button layoutX="550.0" layoutY="15.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="primaryButton" text="Rimuovi" />
-                  <Button layoutX="450.0" layoutY="15.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="primaryButton" text="Modifica" />
-                  <Label layoutX="14.0" layoutY="15.0" prefWidth="121.0" text="Appuntamenti" />
-               </children>
-            </Pane>
-            <Pane fx:id="pane" prefHeight="100.0" prefWidth="660.0" />
-            <TableView fx:id="table" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="513.0" prefWidth="660.0" styleClass="container-level-2">
-               <columns>
-                  <TableColumn fx:id="colonnaEmail" prefWidth="42.5" text="Id" />
-                  <TableColumn fx:id="colonnaId" prefWidth="112.0" text="Email" />
-                  <TableColumn fx:id="colonnaNomeCognome" prefWidth="142.5" text="Nome e Cognome" />
-                  <TableColumn fx:id="colonnaNumero" minWidth="1.0" prefWidth="75.0" text="Numero" />
-                  <TableColumn fx:id="colonnaData" prefWidth="89.0" text="Data" />
-                  <TableColumn fx:id="colonnaDipendente" prefWidth="104.0" text="Dipendente" />
-                  <TableColumn fx:id="colonnaServizio" prefWidth="94.0" text="Servizio" />
-               </columns>
-            </TableView>
-         </children>
-      </VBox>
+      <Button layoutX="365.0" layoutY="67.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="primaryButton" text="Aggiungi" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="67.0" />
+      <Button layoutX="577.0" layoutY="67.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="primaryButton" text="Rimuovi" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="67.0" />
+      <Button layoutX="477.0" layoutY="67.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="primaryButton" text="Modifica" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="67.0" />
+      <Label layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="209.0" text="Appuntamenti" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Label>
+      <TableView fx:id="table" layoutX="10.0" layoutY="113.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="641.0" styleClass="container-level-2" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="113.0">
+         <columns>
+            <TableColumn fx:id="colonnaEmail" prefWidth="42.5" text="Id" />
+            <TableColumn fx:id="colonnaId" prefWidth="112.0" text="Email" />
+            <TableColumn fx:id="colonnaNomeCognome" prefWidth="142.5" text="Nome e Cognome" />
+            <TableColumn fx:id="colonnaNumero" minWidth="1.0" prefWidth="75.0" text="Numero" />
+            <TableColumn fx:id="colonnaData" prefWidth="89.0" text="Data" />
+            <TableColumn fx:id="colonnaDipendente" prefWidth="104.0" text="Dipendente" />
+            <TableColumn fx:id="colonnaServizio" prefWidth="94.0" text="Servizio" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <ComboBox fx:id="filtroBox" layoutX="20.0" layoutY="67.0" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" AnchorPane.leftAnchor="20.0" />
+      <TextField fx:id="cercaField" layoutX="125.0" layoutY="67.0" prefHeight="24.0" prefWidth="127.0" AnchorPane.leftAnchor="115.0" />
+      <Button layoutX="250.0" layoutY="67.0" mnemonicParsing="false" onAction="#cerca" text="Cerca" AnchorPane.leftAnchor="250.0" />
    </children>
-</Pane>
+</AnchorPane>
