--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -1,53 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
    <children>
-      <Pane layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="150.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="645.0" prefWidth="368.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="660.0" prefWidth="657.0">
-               <children>
-                  <Pane prefHeight="45.0" prefWidth="655.0">
-                     <children>
-                        <Label layoutX="7.0" layoutY="10.0" prefHeight="26.0" prefWidth="166.0" text="Cambia il tema dell'app" />
-                        <ComboBox fx:id="temiComboBox" layoutX="525.0" layoutY="11.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" />
-                     </children>
-                  </Pane>
-                  <Pane prefHeight="179.0" prefWidth="657.0">
-                     <children>
-                        <Button layoutX="570.0" layoutY="127.0" mnemonicParsing="false" onAction="#modificaInformazioni" styleClass="primaryButton" text="Modifica" />
-                        <Label layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="592.0" text="Modifica le informazioni presenti nel profilo (Lascia vuoto quello che non vuoi modificare)" />
-                        <Label layoutX="14.0" layoutY="54.0" text="Nome" />
-                        <TextField fx:id="nomeField" styleClass="loginField" layoutX="14.0" layoutY="72.0" />
-                        <Label layoutX="14.0" layoutY="109.0" text="Email" />
-                        <TextField fx:id="emailField" styleClass="loginField" layoutX="14.0" layoutY="127.0" />
-                        <Label layoutX="225.0"  layoutY="54.0" text="Numero" />
-                        <TextField fx:id="numeroField" styleClass="loginField" layoutX="225.0" layoutY="72.0" />
-                        <Label layoutX="225.0" layoutY="109.0" text="Indirizzo" />
-                        <TextField fx:id="indirizzoField" styleClass="loginField" layoutX="225.0" layoutY="127.0" />
-                     </children>
-                  </Pane>
-                  <Pane prefHeight="50.0" prefWidth="655.0">
-                     <children>
-                        <Label layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="166.0" text="Cambia password" />
-                        <Button layoutX="576.0" layoutY="13.0" mnemonicParsing="false" onAction="#cambiaPassword" styleClass="primaryButton" text="Cambia" />
-                     </children>
-                  </Pane>
-                  <Pane prefHeight="50.0" prefWidth="655.0">
-                     <children>
-                        <Button layoutX="297.0" layoutY="13.0" mnemonicParsing="false" onAction="#esci" styleClass="primaryButton" text="Logout" />
-                     </children>
-                  </Pane>
-               </children>
-            </VBox>
+            <Label layoutX="15.0" layoutY="15.0" prefHeight="26.0" prefWidth="166.0" text="Cambia il tema dell'app" />
+            <ComboBox fx:id="temiComboBox" layoutX="208.0" layoutY="16.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" />
+            <Label layoutX="14.0" layoutY="91.0" prefHeight="26.0" prefWidth="166.0" text="Cambia password" AnchorPane.leftAnchor="15.0" />
+            <Button layoutX="280.0" layoutY="92.0" mnemonicParsing="false" onAction="#cambiaPassword" styleClass="primaryButton" text="Cambia" AnchorPane.rightAnchor="20.0" />
+            <Button layoutX="130.0" layoutY="619.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#esci" prefHeight="25.0" prefWidth="100.0" styleClass="primaryButton" text="Logout" AnchorPane.bottomAnchor="2.0" />
+            <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="166.0" text="Font dislessia" AnchorPane.leftAnchor="15.0" />
+            <CheckBox layoutX="257.0" layoutY="57.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="20.0" />
          </children>
-      </Pane>
+      </AnchorPane>
    </children>
 </AnchorPane>
