--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
@@ -12,9 +12,9 @@
 
 <AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
    <children>
-      <Button layoutX="365.0" layoutY="67.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="primaryButton" text="Aggiungi" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="67.0" />
-      <Button layoutX="577.0" layoutY="67.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="primaryButton" text="Rimuovi" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="67.0" />
-      <Button layoutX="477.0" layoutY="67.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="primaryButton" text="Modifica" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="67.0" />
+      <Button layoutX="365.0" layoutY="67.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="secondaryButton" text="Aggiungi" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="67.0" />
+      <Button layoutX="577.0" layoutY="67.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="secondaryButton" text="Rimuovi" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="67.0" />
+      <Button layoutX="477.0" layoutY="67.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="secondaryButton" text="Modifica" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="67.0" />
       <Label layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="209.0" text="Appuntamenti" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
@@ -34,8 +34,8 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <ComboBox fx:id="filtroBox" layoutX="20.0" layoutY="67.0" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" AnchorPane.leftAnchor="20.0" />
-      <TextField fx:id="cercaField" layoutX="125.0" layoutY="67.0" prefHeight="24.0" prefWidth="127.0" AnchorPane.leftAnchor="115.0" />
-      <Button layoutX="250.0" layoutY="67.0" mnemonicParsing="false" onAction="#cerca" text="Cerca" AnchorPane.leftAnchor="250.0" />
+      <ComboBox fx:id="filtroBox" layoutX="20.0" layoutY="67.0" styleClass="secondaryButton" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" AnchorPane.leftAnchor="20.0" />
+      <TextField fx:id="cercaField" layoutX="125.0" layoutY="67.0" styleClass="searchField" prefHeight="24.0" prefWidth="127.0" AnchorPane.leftAnchor="115.0" />
+      <Button layoutX="250.0" layoutY="67.0" styleClass="secondaryButton" mnemonicParsing="false" onAction="#cerca" text="Cerca" AnchorPane.leftAnchor="250.0" />
    </children>
 </AnchorPane>
