--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -17,21 +15,7 @@
             <ComboBox fx:id="temiComboBox" layoutX="500.0" layoutY="142.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" AnchorPane.rightAnchor="-2.0" />
             <AnchorPane layoutX="281.0" layoutY="606.0" prefHeight="25.0" prefWidth="351.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <CheckBox fx:id="checkDislessia" layoutX="593.0" layoutY="262.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="19.0" />
-            <HBox layoutX="407.0" layoutY="426.0" AnchorPane.rightAnchor="15.0">
-               <children>
-                  <Slider fx:id="slideBar" max="25.0" min="10.0" showTickLabels="true" showTickMarks="true" value="10.0" />
-                  <Button fx:id="buttonCambia" mnemonicParsing="false" onAction="#cambiaGrandezza" styleClass="primaryButton" text="Cambia" />
-               </children>
-            </HBox>
-            <Label fx:id="labelSize" layoutX="11.0" layoutY="330.0" text="Grandezza del testo" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Text fx:id="txtSize" layoutX="6.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="La slide bar di fianco, permette di impsotare la grandezza del testo." wrappingWidth="618.0">
-               <font>
-                  <Font size="14.0" />
-               </font></Text>
+            <HBox layoutX="407.0" layoutY="426.0" AnchorPane.rightAnchor="15.0" />
             <Label fx:id="labelDislessia" layoutX="11.0" layoutY="214.0" prefHeight="21.0" prefWidth="704.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
                <font>
                   <Font size="28.0" />
