--- a/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
@@ -9,10 +9,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="ancorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
+<AnchorPane fx:id="ancorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.LoginController">
    <children>
-      <Pane fx:id="pane" layoutX="280.0" layoutY="51.0" maxHeight="600" maxWidth="500" minHeight="400" minWidth="300" prefHeight="500" prefWidth="400" styleClass="container-level-2">
+      <Pane fx:id="pane" layoutX="250.0" layoutY="100.0" maxHeight="600" maxWidth="500" minHeight="400" minWidth="300" prefHeight="500" prefWidth="400" styleClass="container-level-2">
          <children>
             <TextField fx:id="usernameField" layoutX="104.0" layoutY="199.0" promptText="username" styleClass="loginField">
                <opaqueInsets>
@@ -23,7 +22,7 @@
             <Button fx:id="accediButton" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="149.0" layoutY="567.0" mnemonicParsing="false" onAction="#accedi" prefHeight="26.0" prefWidth="78.0" styleClass="primaryButton" text="Accedi" textAlignment="CENTER" />
             <Label fx:id="usernameLabel" contentDisplay="CENTER" layoutX="105.0" layoutY="181.0" text="Username" />
             <Label fx:id="passwordLabel" contentDisplay="CENTER" layoutX="106.0" layoutY="242.0" text="Password" />
-            <Label fx:id="loginLabel" contentDisplay="CENTER" alignment="CENTER" layoutX="104.0" layoutY="54.0" prefHeight="45.0" prefWidth="159.0" text="Login">
+            <Label fx:id="loginLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="104.0" layoutY="54.0" prefHeight="45.0" prefWidth="159.0" text="Login">
                <font>
                   <Font size="48.0" />
                </font>
