--- a/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
@@ -8,53 +8,43 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
+<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="692.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
    <children>
       <Label fx:id="labelDashboard" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="364.0" text="Dashboard" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <GridPane layoutX="10.0" layoutY="50.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.0" minWidth="10.0" prefWidth="348.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="303.0" minWidth="10.0" prefWidth="292.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+      <TableView fx:id="tableGiornliera" editable="true" layoutX="10.0" layoutY="50.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="274.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
+         <columns>
+            <TableColumn fx:id="colonnaId" prefWidth="42.5" text="Id" />
+            <TableColumn fx:id="colonnaEmail" prefWidth="112.0" text="Email" />
+            <TableColumn fx:id="colonnaNomeCognome" prefWidth="142.5" text="Nome e Cognome" />
+            <TableColumn fx:id="colonnaNumero" minWidth="1.0" prefWidth="75.0" text="Numero" />
+            <TableColumn fx:id="colonnaData" prefWidth="89.0" text="Data" />
+            <TableColumn fx:id="colonnaDipendente" prefWidth="104.0" text="Dipendente" />
+            <TableColumn fx:id="colonnaServizio" prefWidth="94.0" text="Servizio" />
+            <TableColumn fx:id="colonnaPrezzo" prefWidth="94.0" text="Prezzo" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <BarChart fx:id="chartGiornaliero" layoutX="367.0" layoutY="50.0" prefHeight="274.0" prefWidth="324.0" title="Giornaliero" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
+      <HBox layoutX="10.0" layoutY="336.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <children>
-            <TableView fx:id="tableGiornliera" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="274.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true">
-               <columns>
-                  <TableColumn fx:id="colonnaId" prefWidth="42.5" text="Id" />
-                  <TableColumn fx:id="colonnaEmail" prefWidth="112.0" text="Email" />
-                  <TableColumn fx:id="colonnaNomeCognome" prefWidth="142.5" text="Nome e Cognome" />
-                  <TableColumn fx:id="colonnaNumero" minWidth="1.0" prefWidth="75.0" text="Numero" />
-                  <TableColumn fx:id="colonnaData" prefWidth="89.0" text="Data" />
-                  <TableColumn fx:id="colonnaDipendente" prefWidth="104.0" text="Dipendente" />
-                  <TableColumn fx:id="colonnaServizio" prefWidth="94.0" text="Servizio" />
-                  <TableColumn fx:id="colonnaPrezzo" prefWidth="94.0" text="Prezzo" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <BarChart fx:id="chartGiornaliero" prefHeight="274.0" prefWidth="324.0" title="Giornaliero" GridPane.columnIndex="1">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-            </BarChart>
-            <TableView fx:id="tableClienti" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="239.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true" GridPane.rowIndex="1">
+            <TableView fx:id="tableClienti" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="239.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true">
                <columns>
                   <TableColumn fx:id="colonnaId1" prefWidth="42.5" text="CF" />
                   <TableColumn fx:id="colonnaEmail1" prefWidth="112.0" text="Email" />
@@ -66,7 +56,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <VBox spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <VBox spacing="20.0">
                <children>
                   <Label fx:id="labelClienti" prefHeight="34.0" prefWidth="280.0" text="Clienti">
                      <font>
@@ -78,6 +68,6 @@
                </children>
             </VBox>
          </children>
-      </GridPane>
+      </HBox>
    </children>
 </AnchorPane>
