--- a/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
@@ -3,23 +3,21 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="692.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
+<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="773.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
    <children>
       <Label fx:id="labelDashboard" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="364.0" text="Dashboard" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <TableView fx:id="tableGiornliera" editable="true" layoutX="10.0" layoutY="50.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="274.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
+      <TableView fx:id="tableGiornliera" editable="true" layoutX="14.0" layoutY="319.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="263.0" prefWidth="392.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="323.0">
          <columns>
             <TableColumn fx:id="colonnaId" prefWidth="42.5" text="Id" />
             <TableColumn fx:id="colonnaEmail" prefWidth="112.0" text="Email" />
@@ -34,7 +32,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <BarChart fx:id="chartGiornaliero" layoutX="367.0" layoutY="50.0" prefHeight="274.0" prefWidth="324.0" title="Giornaliero" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+      <BarChart fx:id="chartGiornaliero" layoutX="10.0" layoutY="59.0" prefHeight="252.0" prefWidth="236.0" title="Giornaliero" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="59.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -42,32 +40,6 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </BarChart>
-      <HBox layoutX="10.0" layoutY="336.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-         <children>
-            <TableView fx:id="tableClienti" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="239.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true">
-               <columns>
-                  <TableColumn fx:id="colonnaId1" prefWidth="42.5" text="CF" />
-                  <TableColumn fx:id="colonnaEmail1" prefWidth="112.0" text="Email" />
-                  <TableColumn fx:id="colonnaNomeCognome1" prefWidth="142.5" text="Nome" />
-                  <TableColumn fx:id="colonnaNumero1" minWidth="1.0" prefWidth="34.0" text="Cognome" />
-                  <TableColumn fx:id="colonnaData1" prefWidth="16.0" text="Numero" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <VBox spacing="20.0">
-               <children>
-                  <Label fx:id="labelClienti" prefHeight="34.0" prefWidth="280.0" text="Clienti">
-                     <font>
-                        <Font size="27.0" />
-                     </font>
-                  </Label>
-                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#modificaCliente" styleClass="secondaryButton" text="Modifica" />
-                  <Button fx:id="addButton" defaultButton="true" mnemonicParsing="false" onAction="#aggiungiCliente" styleClass="secondaryButton" text="Aggiungi" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
+      <Text fx:id="text" layoutX="14.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui di fianco il numero di appuntamenti giornaliero con sotto il suo elenco" wrappingWidth="565.41845703125" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="44.0" />
    </children>
 </AnchorPane>
