--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -296,4 +296,7 @@
     -fx-background-color: linear-gradient(to bottom, fifthBackgroundColor, fourthBackgroundColor);;
 }
 
+.scroll-pane > .corner {
+    -fx-background-color: transparent;
+}
 
